--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24",
     "@types/yup": "^0.29.13",
     "axios": "^0.26.1",
